[fix] Cambiar el gestor de paquetes de npm a pnpm en el flujo de trabajo de despliegue

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
           node-version: '20.14.0'
 
       - name: Instalar dependencias
-        run: npm ci  # Más rápido y seguro que npm install
+        run: pnpm install
 
       - name: Construir aplicación
         run: npm run build
