[fix] Cambiar la instalación de dependencias de pnpm a npm en el flujo de trabajo de despliegue

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
           node-version: '20.14.0'
 
       - name: Instalar dependencias
-        run: pnpm install
+        run: npm i
 
       - name: Construir aplicación
         run: npm run build
