[fix] Cambiar la carpeta de despliegue de 'build' a 'dist' en el flujo de trabajo de GitHub Actions

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,6 @@ jobs:
       - name: Desplegar en GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          folder: build  # Carpeta que contiene los archivos compilados
+          folder: dist  # Carpeta que contiene los archivos compilados
           branch: gh-pages  # Rama donde se desplegará
           clean: true  # Limpia la rama gh-pages antes de desplegar
