[fix] Añadir opciones de exclusión y forzado en el flujo de trabajo de despliegue

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,3 +35,6 @@ jobs:
           folder: dist  # Carpeta que contiene los archivos compilados
           branch: gh-pages  # Rama donde se desplegará
           clean: true  # Limpia la rama gh-pages antes de desplegar
+          clean-exclude: |
+            .nojekyll
+          force: true  # Esto forzará la actualización
